--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^24.5.0",
+    "@types/nodemailer": "^7.0.1",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   },
   "dependencies": {
     "cron": "^4.3.3",
+    "dotenv": "^17.2.2",
+    "env-var": "^7.5.0",
+    "envalid": "^8.1.0",
+    "nodemailer": "^7.0.6",
     "ts-node": "^10.9.2"
   }
 }
